@@ -1,12 +1,11 @@
-FROM gradle:jdk16 AS build
-COPY --chown=gradle:gradle . /home/gradle/src
+FROM gradle:jdk11 AS build
+COPY . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle build --no-daemon 
 
 
-FROM openjdk:8-jre-alpine
+FROM openjdk:11.0.13
 EXPOSE 8080
 RUN mkdir /app
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/
-RUN ls -l /app/
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+COPY --from=build /home/gradle/src/build/libs/lab1-0.0.1-SNAPSHOT.jar /app/spring-boot-application.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
